--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
   annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
   testImplementation 'junit:junit:4.12'
   testImplementation("com.squareup.okhttp3:mockwebserver:3.14.0")
+  testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
   androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
 
